# xena-api-wrapper

./: .env-example  .gitignore  README.md  pyproject.toml
dev-notes/: README.md  api-captures-balance-reports-2026-03-30.md  api-captures-partner-delivery-address-2026-04-01.md  api-captures-partner-gln-2026-03-31.md  api-captures-partner-ledger-match-2026-04-01.md  api-captures-partner-ledger-read-2026-04-01.md  discovery-balance-reports-2026-03-30.md  discovery-template.md
src/xena_api_wrappers/: __init__.py  credentials.py  wrapper.py
src/xena_api_wrappers/core/: __init__.py  client.py  dates.py
src/xena_api_wrappers/workflows/: __init__.py  balance.py  fiscal_period.py
src/xena_api_wrappers/workflows/article/: __init__.py  article.py  article_group.py
src/xena_api_wrappers/workflows/bookkeeping/: __init__.py  voucher_draft.py
src/xena_api_wrappers/workflows/finance/: __init__.py  balance.py  ledger_group_data.py  ledger_group_data_detail.py  ledger_post.py  transaction.py
src/xena_api_wrappers/workflows/utils/: vat.py  (+6 more)
tests/: test_article_group_workflow.py  test_article_workflow.py  test_dates.py  test_fiscal_period_workflow.py  test_ledger_account_workflow.py  test_ledger_group_data_detail_workflow.py  test_ledger_group_data_workflow.py  test_ledger_group_workflow.py  test_ledger_post_workflow.py  test_ledger_tag_workflow.py  test_list_ledgers_workflow.py  test_order_read_workflow.py  test_order_write_workflow.py  test_partner_ledger_workflow.py  test_partner_workflow.py  test_transaction_workflow.py  test_vat_workflow.py  test_voucher_draft_workflow.py
(+10 files in other folders)
