[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xena-api-wrappers"
version = "1.3.1"
description = "High-level task-oriented wrappers for xena-client"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "xena-client>=0.1.0",
  "tzdata>=2024.1",
]

[project.optional-dependencies]
dotenv = [
  "python-dotenv>=1.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
